src/qml/qml/qqmlvme.cpp
@@ -113,7 +113,7 @@ void QQmlVMEGuard::guard(QQmlObjectCreator *creator)
 {
     clear();
 
-    QFiniteStack<QObject*> &objects = creator->allCreatedObjects();
+    QFiniteStack<QPointer<QObject> > &objects = creator->allCreatedObjects();
     m_objectCount = objects.count();
     m_objects = new QPointer<QObject>[m_objectCount];
     for (int ii = 0; ii < m_objectCount; ++ii)
